--- a/guestbook-deploy.yaml
+++ b/guestbook-deploy.yaml
@@ -29,3 +29,37 @@ spec:
         ports:
         - name: http
           containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: guestbook
+  namespace: guestbook
+  labels:
+    app: guestbook
+spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 3000
+    name: http
+  selector:
+    app: guestbook
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: name-virtual-host-ingress
+  namespace: guestbook
+spec:
+  rules:
+  - host: 34.141.182.0.xip.io
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: guestbook
+            port:
+              number: 80
