--- a/guestbook-deploy.yaml
+++ b/guestbook-deploy.yaml
@@ -53,7 +53,7 @@ metadata:
   namespace: guestbook
 spec:
   rules:
-  - host: 34.141.182.0.xip.io
+  - host: 34.141.182.0.nip.io
     http:
       paths:
       - path: /
